2007-01-23  Donald E. Curtis <dcurtis3@sourceforge.net>

	* tools/obmm.cpp: Added check for cin.eof resolving bug 1639880.

2007-01-22  Donald E. Curtis <dcurtis3@sourceforge.net>

	* include/openbabel/bond.h: Added const versions of GetBeginAtom and
	GetEndAtom.

	* include/openbabel/atom.h: Added const version of GetVector.  Required
	changing _v to mutable.

	* src/atom.cpp: Added implementation of GetVector.

	* include/openbabel/math/vector3.h: Added const to function definition of
	AsArray function.

2007-01-17  Noel O'Boyle <baoilleach@gmail.com>

	* windows-vc2005/Distribution: Added all of the remaining files to the
	installer script so that you can now make an installer directly after
	compiling the relevant projects (OBGUII and OBComLn). Have also
	checked in the example files included with the Windows distribution.

2007-01-16  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/mol.h, src/*: Documentation updates.

	* include/openbabel/Makefile.am: Make sure pluginiter.h is included.

2007-01-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/snprintf.c: Update with declaration of GPL license in
	addition to Artistic. Checked with author:
	http://www.ijs.si/software/snprintf/

	* configure.in, configure, Makefiles: Bump version number to
	2.1.0b5.

	* src/forcefields/forcefieldmmff94.cpp: Added stub for
	electrostatic calculation. Solves linking problems on Mac OS X.

2007-01-14  Noel O'Boyle <baoilleach@gmail.com>

	* windows-vc2005/Distribution: Edited the installer script to make it
	easier to set the version number. Also added explicit paths to some of
	the DLLs in the SVN repository.

	* COPYING: Removed the text after the terms and conditions. This is
	the text describing how to apply the license.

2007-01-13  Noel O'Boyle <baoilleach@gmail.com>
	
	* windows-vc2005/Distribution: Added files necessary for creating an
	installer using NSIS, an open source software for creating Windows